# SignalR-Client-Cpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  samples_VS2013.sln  signalrclient.sln  signalrclient_VS2013.sln
.nuget/: NuGet.targets
NuGet/: Microsoft.AspNet.SignalR.Client.Cpp.WinDesktop.targets.template  Microsoft.SignalR.Client.Cpp.targets  signalrclientcpp.nuspec  signalrclientcpp.nuspec.template
include/signalrclient/: _exports.h  connection.h  connection_state.h  hub_connection.h  hub_exception.h  hub_proxy.h  log_writer.h  signalr_client_config.h  trace_level.h  trace_log_writer.h  transport_factory.h  transport_type.h  web_exception.h  web_request.h  web_request_factory.h  web_response.h
sample/signalr-client-cpp-sample/: ReadMe.txt  sample.cpp  signalr-client-cpp-sample.vcxproj  signalr-client-cpp-sample.vcxproj.filters  stdafx.h
samples/HubConnectionSample/: HubConnectionSample.cpp  HubConnectionSample.vcxproj  HubConnectionSample.vcxproj.filters
samples/PersistentConnectionSample/: PersistentConnectionSample.cpp  PersistentConnectionSample.vcxproj  PersistentConnectionSample.vcxproj.filters  packages.config
samples/SignalRServer/: EchoConnection.cs  SignalRServer.csproj  Startup.cs  Web.config  packages.config
samples/SignalRServer/Properties/: AssemblyInfo.cs
src/signalrclient/: CMakeLists.txt  callback_manager.cpp  callback_manager.h  case_insensitive_comparison_utils.h  connection.cpp  connection_impl.cpp  connection_impl.h  constants.h  default_websocket_client.cpp  default_websocket_client.h  dllmain.cpp  event.h  http_sender.cpp  http_sender.h  hub_connection.cpp  hub_connection_impl.cpp  hub_connection_impl.h  hub_proxy.cpp  internal_hub_proxy.cpp  internal_hub_proxy.h  logger.cpp  logger.h  long_polling_transport.cpp  long_polling_transport.h  negotiation_response.h  request_sender.cpp  request_sender.h  signalr_client_config.cpp  stdafx.cpp  stdafx.h  trace_log_writer.cpp  trace_log_writer.h  transport.cpp  transport.h  transport_factory.cpp  transport_factory.h  url_builder.cpp  url_builder.h  web_request.cpp  web_request.h  (+6 more)
src/signalrclientdll/: Resource.rc  dllmain.cpp
test/gtest-1.7.0/msvc/: gtest.vcxproj  gtest.vcxproj.filters
test/signalrclient-e2e-tests/: connection_tests.cpp  hub_connection_tests.cpp  signalrclient-e2e-tests.cpp  stdafx.h  test_utils.cpp  test_utils.h
test/signalrclient-testhost/: Program.cs  Startup.cs  signalrclient-testhost.csproj
test/signalrclient-testhost/Connections/: HubConnection.cs  RawConnection.cs
test/signalrclient-testhost/Properties/: AssemblyInfo.cs
test/signalrclienttests/: callback_manager_tests.cpp  case_insensitive_comparison_utils_tests.cpp  connection_impl_tests.cpp  http_sender_tests.cpp  hub_connection_impl_tests.cpp  hub_exception_tests.cpp  internal_hub_proxy_tests.cpp  logger_tests.cpp  long_polling_transport_tests.cpp  memory_log_writer.cpp  memory_log_writer.h  request_sender_tests.cpp  signalrclienttests.cpp  stdafx.cpp  stdafx.h  targetver.h  test_transport_factory.cpp  test_transport_factory.h  test_utils.cpp  test_utils.h  test_web_request_factory.cpp  test_web_request_factory.h  test_websocket_client.cpp  test_websocket_client.h  url_builder_tests.cpp  web_request_stub.cpp  web_request_stub.h  web_request_tests.cpp  websocket_transport_tests.cpp
